--- a/backend/commands/install
+++ b/backend/commands/install
@@ -31,7 +31,7 @@ alias stickers="echo stickers:;echo ⚜️ = initial commit;echo 🐛 = bug fixi
 echo && echo Installing the requirements | lolcat -d 1 && echo
 npm install
 adonis install mysql
-adonis install @adonisjs/validator
+adonis install @adonisjs/validator@5.0.6
 
 # Everything is done
 echo && echo "The installation process is done" | lolcat -d 1
