✅ socket added to the project with one channel

--- a/backend/commands/install
+++ b/backend/commands/install
@@ -32,6 +32,7 @@ echo && echo Installing the requirements | lolcat -d 1 && echo
 npm install
 adonis install mysql
 adonis install @adonisjs/validator@5.0.6
+adonis install @adonisjs/websocket
 
 # Everything is done
 echo && echo "The installation process is done" | lolcat -d 1
